# munchess

./: .clangd  .gitignore  CMakeLists.txt  README.md  benchmark.py  statistics.md
include/: board.h  common.h  constants.h  core.h  defs.h  engine.h  generate.h  move.h  parser.h  pgn.h  piece.h  result.h  tests.h  uci.h  utils.h
res/tests/: game-1.pgn
src/: CMakeLists.txt  board.c  common.c  constants.c  engine.c  generate.c  main.c  move.c  munchess.c  parser.c  pgn.c  piece.c  result.c  test.py  tests.c  tests_main.c  uci.c  utils.c
